[package]
name = "serde-compat-with"
version = "0.1.0"
edition = "2021"
description = "Backward compatibility with older data using serde's untagged enums"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.103"
