[package]
name = "compatible-with"
version = "0.1.1"
edition = "2021"
description = "Backward compatibility with older data using serde's untagged enums"
license = "MIT"
repository = "https://github.com/uttarayan21/compatible-with"
documentation = "https://docs.rs/compatible-with"

[dependencies]
serde = { workspace = true }
compatible-with-derive = { workspace = true }

[dev-dependencies]
serde_json = "1.0.103"

[workspace]
members = [
    ".",
    "compatible-with-derive"
]

[workspace.dependencies]
serde = { version = "1.0.171", features = ["derive"] }
compatible-with-derive = { version = "0.1.0", path = "compatible-with-derive" }
